--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -14,7 +14,7 @@ import profilePic from "../assets/profile_pic.jpg";
 const education = "Student in CS @ OU && ISIMA";
 const location = "Norman, OK, USA";
 const phone = "+33(0)6 42 08 91 17";
-const phoneLink = "tel:+33642089117";
+const phoneLink = "tel:" + phone.replaceAll(" ", "").replace("(0)", "");
 const email = "tristan.bony@proton.me";
 const emailLink = "mailto:" + email;
 ---
