--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -22,7 +22,7 @@ const emailLink = "mailto:" + email;
 <section
 	class="w-full p-4 mb-2 bg-white rounded-2xl shadow-lg dark:bg-gray-800"
 >
-	<div class="flex flex-row flex-wrap justify-around items-center">
+	<div class="flex flex-row flex-wrap justify-around items-start">
 		<article class="text-justify xl:flex-[70%]">
 			<h2 class="mb-10 text-2xl font-bold">Who am I? (Boring version)</h2>
 			<p class="mb-5">
