--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,9 +5,9 @@ import { Icon } from 'astro-icon/components';
 <header class="header flex flex-row justify-between mb-4 p-4 w-full shadow-lg rounded-2xl bg-white dark:bg-gray-800">
 	<a href="/" class="inline-flex">
 		<Icon name="favicon" title="Logo representing the initials T B" size={96} />
-		<h1 class="my-auto ms-4 text-black text-4xl font-bold text-balance dark:text-white">
+		<span class="my-auto ms-4 text-black text-4xl font-bold text-balance dark:text-white">
 			Tristan Bony
-		</h1>
+		</span>
 	</a>
 
 	<label class="swap swap-rotate">
