Added some colors :)

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -14,11 +14,11 @@ const title = frontmatter.title + " - Tristan Bony";
 	<main
 		class="max-w-none p-4 mb-4 bg-white rounded-2xl shadow-lg prose
 			
-			prose-headings:text-black prose-a:text-blue-600 prose-p:text-justify prose-p:text-gray-800 prose-p:text-pretty prose-li:text-black prose-li:marker:text-black prose-code:text-black prose-strong:text-black prose-figure:w-fit prose-figure:p-2 prose-figure:m-auto prose-figure:border prose-figure:rounded-2xl prose-img:rounded-2xl prose-img:w-full prose-img:max-h-[500px] prose-figcaption:text-center
+			prose-headings:text-black prose-a:text-blue-500 prose-p:text-justify prose-p:text-gray-800 prose-p:text-pretty prose-li:text-black prose-li:marker:text-black prose-code:bg-slate-200 prose-code:text-sky-700 prose-strong:text-blue-600 prose-figure:w-fit prose-figure:p-2 prose-figure:m-auto prose-figure:border prose-figure:rounded-2xl prose-img:rounded-2xl prose-img:w-full prose-img:max-h-[500px] prose-figcaption:text-center
 			
 			dark:prose-invert dark:bg-gray-800
 			
-			dark:prose-headings:text-white dark:prose-p:text-white dark:prose-li:text-white dark:prose-li:marker:text-white dark:prose-code:text-white dark:prose-strong:text-white"
+			dark:prose-a:text-blue-300 dark:prose-headings:text-white dark:prose-p:text-white dark:prose-li:text-white dark:prose-li:marker:text-white dark:prose-code:bg-slate-900 dark:prose-code:text-sky-500 dark:prose-strong:text-blue-500"
 	>
 		<div class="flex justify-between">
 			<h1 class="mt-0 text-3xl text-balance">{frontmatter.title}</h2>
