Added Codeberg link to project page

--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -156,41 +156,41 @@ const emailLink = "mailto:" + email;
 					href="https://www.linkedin.com/in/tristanbony/"
 					target="_blank"
 					title="Visit my LinkedIn"
-					class="w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125"
+					class="w-8 h-8 m-2 inline-block transition duration-300 ease-in-out hover:scale-125 focus:scale-90"
 				>
-					<Icon name="linkedin" title="Visit my LinkedIn" size={32} class="inline" />
+					<Icon name="linkedin" title="Visit my LinkedIn" size={32} />
 				</a>
 				<a
 					href="https://floss.social/@TristanB0"
 					target="_blank"
 					title="Come see my toots"
-					class="w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125"
+					class="w-8 h-8 m-2 inline-block transition duration-300 ease-in-out hover:scale-125 focus:scale-90"
 				>
-					<Icon name="mastodon" title="Come see my toots" size={32} class="inline" />
+					<Icon name="mastodon" title="Come see my toots" size={32} />
 				</a>
 				<a
 					href="https://www.github.com/TristanB0"
 					target="_blank"
 					title="Link to my projects"
-					class="w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125 dark:hidden"
+					class="w-8 h-8 m-2 inline-block transition duration-300 ease-in-out hover:scale-125 focus:scale-90 dark:hidden"
 				>
-					<Icon name="github" title="Link to my projects" size={32} class="inline" />
+					<Icon name="github" title="Link to my projects" size={32} />
 				</a>
 				<a
 					href="https://www.github.com/TristanB0"
 					target="_blank"
 					title="Link to my projects"
-					class="w-8 h-8 m-2 transition duration-300 ease-in-out hidden hover:scale-125 dark:block"
+					class="w-8 h-8 m-2 transition duration-300 ease-in-out hidden hover:scale-125 focus:scale-90 dark:inline-block"
 				>
-					<Icon name="github_white" title="Link to my projects" size={32} class="inline" />
+					<Icon name="github_white" title="Link to my projects" size={32} />
 				</a>
 				<a
 					href="https://codeberg.org/TristanB0"
 					target="_blank"
 					title="My projects but on Codeberg"
-					class="w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125"
+					class="w-8 h-8 m-2 inline-block transition duration-300 ease-in-out hover:scale-125 focus:scale-90"
 				>
-					<Icon name="codeberg" title="My projects but on Codeberg" size={32} class="inline" />
+					<Icon name="codeberg" title="My projects but on Codeberg" size={32} />
 				</a>
 			</div>
 		</aside>
