--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -22,28 +22,41 @@ const title = frontmatter.title + " - Tristan Bony";
 	>
 		<div class="flex justify-between">
 			<h1 class="mt-0 text-3xl text-balance">{frontmatter.title}</h2>
-			<a
-				href={frontmatter.link}
-				target="_blank"
-				title="Link to the project"
-				class:list={[
-					"w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125",
-					frontmatter.link ? "dark:hidden" : "hidden",
-				]}
-			>
-				<Icon name="github" title="Link to the project" class="mt-0 mb-0" size={32} />
-			</a>
-			<a
-				href={frontmatter.link}
-				target="_blank"
-				title="Link to the project"
-				class:list={[
-					"w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125",
-					frontmatter.link ? "hidden dark:inline-block" : "hidden",
-				]}
-			>
-				<Icon name="github_white" title="Link to the project" class="mt-0 mb-0" size={32} />
-			</a>
+			<div class="links">
+				<a
+					href={"https://github.com/TristanB0/" + frontmatter.link}
+					target="_blank"
+					title="Link to the project"
+					class:list={[
+						"w-8 h-8 m-2 inline-block transition duration-300 ease-in-out hover:scale-125 focus:scale-90",
+						frontmatter.link ? "dark:hidden" : "hidden",
+					]}
+				>
+					<Icon name="github" title="Link to the project" size={32} />
+				</a>
+				<a
+					href={"https://github.com/TristanB0/" + frontmatter.link}
+					target="_blank"
+					title="Link to the project"
+					class:list={[
+						"w-8 h-8 m-2 inline-block transition duration-300 ease-in-out hover:scale-125 focus:scale-90",
+						frontmatter.link ? "hidden dark:inline-block" : "hidden",
+					]}
+				>
+					<Icon name="github_white" title="Link to the project" size={32} />
+				</a>
+				<a
+					href={"https://codeberg.org/TristanB0/" + frontmatter.link}
+					target="_blank"
+					title="Link to the project"
+					class:list={[
+						"w-8 h-8 m-2 inline-block transition duration-300 ease-in-out hover:scale-125 focus:scale-90",
+						frontmatter.link ? "dark:inline-block" : "hidden",
+					]}
+				>
+					<Icon name="codeberg" title="Link to the project" size={32} />
+				</a>
+			</div>
 		</div>
 		<slot />
 	</main>
