--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -14,7 +14,7 @@ interface Props {
 	status: string;
 }
 
-const cardTitle = (cat: string) => {
+export const cardTitle = (cat: string) => {
 	switch (cat) {
 		case "achievement":
 			return "Achievements";
@@ -27,7 +27,7 @@ const cardTitle = (cat: string) => {
 	}
 };
 
-const cardStatus = (status: string) => {
+export const cardStatus = (status: string) => {
 	switch (status) {
 		case "completed":
 			return {
@@ -95,7 +95,12 @@ if (!images[image.path] && image.path != null)
 				{cardStatus(status).status}
 			</div>
 		</div>
-		<h2 class="card-title"><a class="hover:text-blue-600 focus:text-blue-800" href={href} title={"Read more about " + title}>{title}</a></h2>
+		<h2 class="card-title">
+			<a
+				class="hover:text-blue-600 focus:text-blue-800"
+				href={href}
+				title={"Read more about " + title}>{title}</a>
+		</h2>
 		<p class="justify-normal text-justify text-pretty">{description}</p>
 	</article>
 </section>
