--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@ import { Icon } from 'astro-icon/components';
 		</span>
 	</a>
 
-	<label class="swap swap-rotate">
+	<label class="swap swap-rotate mr-2">
 		<input type="checkbox" id="themeToggle" />
 
 		<Icon name="material-symbols:sunny-outline-rounded" title="Toggle dark theme" size={48} class="swap-on fill-current" />
