Mostly code formatting and update outdated info

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,8 @@ const d: Date = new Date();
 const year: number = d.getFullYear();
 ---
 
-<footer class="footer footer-center p-4 mt-2 bg-white rounded-2xl text-base shadow-lg dark:bg-gray-800">
-	<p>Developed with 💙 by me | &copy; {year} </p>
+<footer
+    class="footer footer-center p-4 mt-2 bg-white rounded-2xl text-base shadow-lg dark:bg-gray-800"
+>
+    <p>Developed with 💙 by me | &copy; {year}</p>
 </footer>
