--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -3,104 +3,107 @@ import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 
 interface Props {
-	title: string;
-	description: string;
-	href: string | undefined;
-	image: {
-		path: string;
-		alt: string;
-	};
-	category: string;
-	status: string;
+    title: string;
+    description: string;
+    href: string | undefined;
+    image: {
+        path: string;
+        alt: string;
+    };
+    category: string;
+    status: string;
 }
 
 export const cardTitle = (cat: string) => {
-	switch (cat) {
-		case "achievement":
-			return "Achievements";
-		case "school-project":
-			return "School projects";
-		case "experience":
-			return "Experiences";
-		default:
-			return "Other";
-	}
+    switch (cat) {
+        case "achievement":
+            return "Achievements";
+        case "school-project":
+            return "School projects";
+        case "experience":
+            return "Experiences";
+        case "blog":
+            return "Blog";
+        default:
+            return "Other";
+    }
 };
 
 export const cardStatus = (status: string) => {
-	switch (status) {
-		case "completed":
-			return {
-				color: "text-green-500",
-				status: "Completed",
-			};
-		case "in-progress":
-			return {
-				color: "text-blue-500",
-				status: "In progress",
-			};
-		case "maintenance":
-			return {
-				color: "text-yellow-500",
-				status: "Maintenance",
-			};
-		case "discontinued":
-			return {
-				color: "text-red-500",
-				status: "Discontinued",
-			};
-		case "hold":
-			return {
-				color: "text-purple-500",
-				status: "On hold",
-			};
-		default:
-			return {
-				color: "hidden",
-				status: null,
-			};
-	}
+    switch (status) {
+        case "completed":
+            return {
+                color: "text-green-500",
+                status: "Completed",
+            };
+        case "in-progress":
+            return {
+                color: "text-blue-500",
+                status: "In progress",
+            };
+        case "maintenance":
+            return {
+                color: "text-yellow-500",
+                status: "Maintenance",
+            };
+        case "discontinued":
+            return {
+                color: "text-red-500",
+                status: "Discontinued",
+            };
+        case "hold":
+            return {
+                color: "text-purple-500",
+                status: "On hold",
+            };
+        default:
+            return {
+                color: "hidden",
+                status: null,
+            };
+    }
 };
 
 const { title, description, href, image, category, status } = Astro.props;
 
 import placeholderImg from "../assets/card/placeholder.jpg";
 const images = import.meta.glob<{ default: ImageMetadata }>(
-	"/src/assets/card/*.{jpeg,jpg,png,gif}",
+    "/src/assets/card/*.{jpeg,jpg,png,gif}",
 );
 if (!images[image.path] && image.path != null)
-	throw new Error(
-		`"${image.path}" does not exist in glob: "src/assets/card/*.{jpeg,jpg,png,gif}"`,
-	);
+    throw new Error(
+        `"${image.path}" does not exist in glob: "src/assets/card/*.{jpeg,jpg,png,gif}"`,
+    );
 ---
 
 <section
-	class="card w-full m-2 bg-white shadow-lg md:w-5/12 2xl:w-[23%] dark:bg-gray-800"
+    class="card w-full m-2 bg-white shadow-lg md:w-5/12 2xl:w-[23%] dark:bg-gray-800"
 >
-	<figure class="max-h-48">
-		{
-			image.path ? (
-				<Image src={images[image.path]()} alt={image.alt} />
-			) : (
-				<Image src={placeholderImg} alt="Missing image" />
-			)
-		}
-	</figure>
-	<article class="card-body">
-		<div class="inline">
-			<div class="badge badge-outline text-gray-500 dark:text-gray-300">
-				{cardTitle(category)}
-			</div>
-			<div class:list={["badge badge-outline", cardStatus(status).color]}>
-				{cardStatus(status).status}
-			</div>
-		</div>
-		<h2 class="card-title">
-			<a
-				class="hover:text-blue-600 focus:text-blue-800"
-				href={href}
-				title={"Read more about " + title}>{title}</a>
-		</h2>
-		<p class="justify-normal text-justify text-pretty">{description}</p>
-	</article>
+    <figure class="max-h-48">
+        {
+            image.path ? (
+                <Image src={images[image.path]()} alt={image.alt} />
+            ) : (
+                <Image src={placeholderImg} alt="Missing image" />
+            )
+        }
+    </figure>
+    <article class="card-body">
+        <div class="inline">
+            <div class="badge badge-outline text-gray-500 dark:text-gray-300">
+                {cardTitle(category)}
+            </div>
+            <div class:list={["badge badge-outline", cardStatus(status).color]}>
+                {cardStatus(status).status}
+            </div>
+        </div>
+        <h2 class="card-title">
+            <a
+                class="hover:text-blue-600 focus:text-blue-800"
+                href={href}
+                title={"Read more about " + title}>{title}</a
+            >
+        </h2>
+        <p class="justify-normal text-justify text-pretty">{description}</p>
+    </article>
 </section>
