--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,69 +1,87 @@
 ---
-import { Icon } from 'astro-icon/components';
+import { Icon } from "astro-icon/components";
 ---
 
-<header class="header flex flex-row justify-between mb-4 p-4 w-full shadow-lg rounded-2xl bg-white dark:bg-gray-800">
-	<a href="/" class="inline-flex">
-		<Icon name="favicon" title="Logo representing the initials T B" size={96} />
-		<span class="my-auto ms-4 text-black text-4xl font-bold text-balance dark:text-white">
-			Tristan Bony
-		</span>
-	</a>
+<header
+    class="header flex flex-row justify-between mb-4 p-4 w-full shadow-lg rounded-2xl bg-white dark:bg-gray-800"
+>
+    <a href="/" class="inline-flex">
+        <Icon
+            name="favicon"
+            title="Logo representing the initials T B"
+            size={96}
+        />
+        <span
+            class="my-auto ms-4 text-black text-4xl font-bold text-balance dark:text-white"
+        >
+            Tristan Bony
+        </span>
+    </a>
 
-	<label class="swap swap-rotate mr-2">
-		<input type="checkbox" id="themeToggle" />
+    <label class="swap swap-rotate mr-2">
+        <input type="checkbox" id="themeToggle" />
 
-		<Icon name="material-symbols:sunny-outline-rounded" title="Toggle dark theme" size={48} class="swap-on fill-current" />
+        <Icon
+            name="material-symbols:sunny-outline-rounded"
+            title="Toggle dark theme"
+            size={48}
+            class="swap-on fill-current"
+        />
 
-		<Icon name="material-symbols:dark-mode-outline-rounded" title="Toggle light theme" size={48} class="swap-off fill-current" />
-	</label>
+        <Icon
+            name="material-symbols:dark-mode-outline-rounded"
+            title="Toggle light theme"
+            size={48}
+            class="swap-off fill-current"
+        />
+    </label>
 </header>
 
 <script>
-	document.addEventListener("astro:page-load", () => {
-		const theme = (() => {
-			if (
-				typeof localStorage !== "undefined" &&
-				localStorage.getItem("theme")
-			) {
-				return localStorage.getItem("theme");
-			}
-			if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-				return "dark";
-			}
-			return "light";
-		})();
+    document.addEventListener("astro:page-load", () => {
+        const theme = (() => {
+            if (
+                typeof localStorage !== "undefined" &&
+                localStorage.getItem("theme")
+            ) {
+                return localStorage.getItem("theme");
+            }
+            if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+                return "dark";
+            }
+            return "light";
+        })();
 
-		if (theme === "light") {
-			document.documentElement.classList.remove("dark");
-		} else {
-			document.documentElement.classList.add("dark");
-			const themeToggle = document.getElementById(
-				"themeToggle",
-			) as HTMLInputElement;
-			themeToggle.checked = true;
-		}
+        if (theme === "light") {
+            document.documentElement.classList.remove("dark");
+        } else {
+            document.documentElement.classList.add("dark");
+            const themeToggle = document.getElementById(
+                "themeToggle",
+            ) as HTMLInputElement;
+            themeToggle.checked = true;
+        }
 
-		window.localStorage.setItem("theme", theme ?? "");
+        window.localStorage.setItem("theme", theme ?? "");
 
-		const handleToggleClick = () => {
-			const element = document.documentElement;
-			element.classList.toggle("dark");
+        const handleToggleClick = () => {
+            const element = document.documentElement;
+            element.classList.toggle("dark");
 
-			const isDark = element.classList.contains("dark");
-			localStorage.setItem("theme", isDark ? "dark" : "light");
-		};
+            const isDark = element.classList.contains("dark");
+            localStorage.setItem("theme", isDark ? "dark" : "light");
+        };
 
-		document
-			.getElementById("themeToggle")
-			?.addEventListener("click", handleToggleClick);
-	});
+        document
+            .getElementById("themeToggle")
+            ?.addEventListener("click", handleToggleClick);
+    });
 </script>
 
 <script>
-	document.addEventListener("astro:after-swap", () => {
-		localStorage.theme === "dark"
-			? document.documentElement.classList.add("dark")
-			: document.documentElement.classList.add("light");
-	});
+    document.addEventListener("astro:after-swap", () => {
+        localStorage.theme === "dark"
+            ? document.documentElement.classList.add("dark")
+            : document.documentElement.classList.add("light");
+    });
 </script>
