--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -4,34 +4,36 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 
 interface Props {
-	title: string;
-	description: string;
+    title: string;
+    description: string;
 }
 
 const { title, description } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-US" transition:animate="slide">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content={description} />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-		<style is:global>
-			:root {
-				--b1: 0;
-			}
-		</style>
-		<ViewTransitions />
-	</head>
-	<body class="font-sans bg-gray-100 text-gray-800 dark:bg-gray-950 dark:text-white">
-		<div class="m-4 xl:my-4 xl:mx-52">
-			<Header />
-			<slot />
-			<Footer />
-		</div>
-	</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="description" content={description} />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
+        <meta name="generator" content={Astro.generator} />
+        <title>{title}</title>
+        <style is:global>
+            :root {
+                --b1: 0;
+            }
+        </style>
+        <ViewTransitions />
+    </head>
+    <body
+        class="font-sans bg-gray-100 text-gray-800 dark:bg-gray-950 dark:text-white"
+    >
+        <div class="m-4 xl:my-4 xl:mx-52">
+            <Header />
+            <slot />
+            <Footer />
+        </div>
+    </body>
 </html>
