--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -18,7 +18,7 @@ const signalLink =
     "https://signal.me/#eu/WYwsWB_b4jv31xlz5cVMuqrBngYWG2PbTdAS_EThgpwurUKxcylGoZaV2KAIVN8J";
 const phone = "+33(0)6 42 08 91 17";
 const phoneLink = "tel:" + phone.replaceAll(" ", "").replace("(0)", "");
-const email = "tristan.bony@proton.me";
+const email = "contact@tristanbony.me";
 const emailLink = "mailto:" + email;
 ---
 
